[project]
name = "pythontosw"
version = "2.0.0"
description = "A Python package that allows you to create basic addons in Stormworks: Build and Rescue with Python."
requires-python = ">=3.10"

readme = {file = "README.md", content-type = "text/markdown"}
license.file = "LICENSE"

authors = [
    {name = "Cuh4", email = "89425262+Cuh4@users.noreply.github.com"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = ["coloredlogs (>=15.0.1,<16.0.0)", "fastapi (>=0.115.13,<0.116.0)", "xmltodict (>=0.14.2,<0.15.0)", "pytest (>=8.4.1,<9.0.0)"]

[tool.poetry]
packages = [{include = "PythonToSW", from = "src"}]

[project.urls]
Homepage = "https://github.com/Cuh4/PythonToSW"
Issues = "https://github.com/Cuh4/PythonToSW/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"