[metadata]
name = PythonToSW
version = file: VERSION
author = Cuh4
description = A package that allows you to create addons in Stormworks with Python, handled through HTTP.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
url = https://pythontosw.cuhhub.com/

project_urls = 
    Source = https://github.com/Cuh4/PythonToSW
    Documentation = https://pythontosw.cuhhub.com/

[options]
package_dir =
    = src
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = src/PythonToSW/addon/*